--- a/efuel/styles/Map.module.css
+++ b/efuel/styles/Map.module.css
@@ -1,4 +1,9 @@
 .container {
-    width: 1366px;
-    height: 768px;
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+  }
+
+  .map {
+    width: 100%;
   }
