--- a/efuel/styles/Map.module.css
+++ b/efuel/styles/Map.module.css
@@ -1,18 +1,20 @@
 .container {
-    width: 100%;
-    height: 100%;
-    overflow-y: hidden;
-  }
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+}
 
-  .map {
-    width: 100%;
-    height: 1000px;
-  }
+.map {
+  width: 100%;
+  height: 1000px;
+}
 
-  .fuelSelect {
-    width: 4rem;
-  }
+.fuelSelect {
+  width: 4rem;
+  z-index: -1;
+}
 
-  .rangeInput {
-    width: 4rem;
-  }
+.rangeInput {
+  width: 4rem;
+  z-index: -1;
+}
