styles and labels

--- a/efuel/styles/Map.module.css
+++ b/efuel/styles/Map.module.css
@@ -9,8 +9,13 @@
   height: 1000px;
 }
 
+.controlContainer {
+  display: flex;
+  flex-direction: column;
+}
+
 .fuelSelect {
-  width: 4rem;
+  width: 6rem;
   z-index: -1;
 }
 
