--- a/efuel/styles/Map.module.css
+++ b/efuel/styles/Map.module.css
@@ -3,6 +3,12 @@
   height: 100%;
 }
 
+@media (pointer:none), (pointer:coarse) {
+  .map {
+    height: 93%;
+  }
+}
+
 .controlContainer {
   display: flex;
   flex-direction: column;
@@ -21,4 +27,15 @@
 
 .locationSearch {
   height: 1.9rem !important;
+}
+
+.locateButton {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+}
+
+.locateButtonIcon {
+  height: 2rem;
+  width: 2rem;
 }
